# ntfy-discord-bridge

./: .dockerignore  .gitignore  .pylintrc  Dockerfile  LICENSE  README.md  README.pl.md  cli.py  docker-compose.dokploy.yml  docker-compose.yml  main.py  pyproject.toml
app/: discord.py  ntfy.py  task_manager.py
app/core/: database.py  logging.py
