[project]
name = "ntfy-discord-bridge"
version = "0.1.0"
description = "A bridge service that forwards notifications from ntfy to Discord webhooks."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.21.0",
    "backoff>=2.2.1",
    "httpx>=0.28.1",
    "rich>=14.2.0",
    "uvloop>=0.22.1",
]


[tool.ruff.lint]
select = ["ALL"]
preview = true
ignore = [
    # "D100",   # Missing docstring in public module
    # "D104",   # Missing docstring in public package
    "ANN101", # Missing type hint for 'self'
    "D401", # First line of docstring should be in imperative mood: "Main function listening to Ntfy and forwarding messages to Discord.
    "N805",
    "PTH123", # `open()` should be replaced by `Path.open()`
    "CPY001", #Missing copyright notice at top of file
    "PLR6201", #Use a set literal when testing for membership - This rule's fix is marked as unsafe, as the use of a set literal will error at runtime if either the element being tested for membership (the left-hand side) or any element of the sequence (the right-hand side) is unhashable (like lists or dictionaries). While Ruff will attempt to infer the hashability of both sides and skip the fix when it can determine that either side is unhashable, it may not always be able to do so. https://docs.astral.sh/ruff/rules/literal-membership/#literal-membership-plr6201
]
